prod/prometheus-operator/auth-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-auth
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.sdpaks.equinor.com
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-sdp
            port:
              number: 4180
  tls:
  - hosts:
    - alertmanager.sdpaks.equinor.com
    secretName: alertmanager-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-auth
  namespace: monitoring
spec:
  rules:
  - host: prometheus.sdpaks.equinor.com
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-sdp
            port:
              number: 4180
        
  tls:
  - hosts:
    - prometheus.sdpaks.equinor.com
    secretName: prometheus-tls
